tests/NormalTests/paczka2/big_fuzzy/68558287.err
Error in line 2: 8qpjlLejg S425 86,7
Error in line 13: WNtvrEupCK S633 21,7
Error in line 15: c2x S633 63,2
Error in line 17: WNtvrEupCK S33 2,4
Error in line 19: 9i3FK A270 63,1
Error in line 18: c2x A661 39,3
Error in line 23: 8qpjlLejg S633 650,4
Error in line 24: c2x S425 29,8
Error in line 25: EdtTYEki A270 29,5
Error in line 35: S633 A270 37,9
Error in line 46: 9i3FK S633 73,9
Error in line 51: 9i3FK S425 80,7
Error in line 52: 9i3FK A661 100,0
Error in line 36: 8qpjlLejg A270 22,1
Error in line 64: 9i3FK A27a 17,6
Error in line 69: 9i3FK A270 78,06
Error in line 68: 9i3FK S633 10,3
Error in line 81: EdtTYEki S633 08,2
Error in line 63: EdtTYEki S633 0,2
Error in line 71: 9i3FK A270 25,2
Error in line 90: 9i3FK S425 196,*
Error in line 88: 9i3FK S425 47,7
Error in line 91: EdtTYEki S633 25,9
Error in line 102: GJeUYLKHzcb S425 19,9
Error in line 96: 8qpjlLejg A661 84,3
Error in line 118: S633 A270 70,0
Error in line 121: S633 S633 89,3
Error in line 119: GJeUYLKHzcb A661 20,2
Error in line 129: 8qpjlLejg S425 88,2
Error in line 123: WNtvrEupCK A661 7,1
Error in line 141: EdtTYEki S633 62,0
Error in line 151: S633 A270 62,0
Error in line 152: c2x A270 31,5
Error in line 158: c2x A661 19,83
Error in line 124: 9i3FK S425 96,9
Error in line 147: GJeUYLKHzcb A270 102,8
Error in line 165: WNtvrEupCK S425 17,11
Error in line 160: 9i3FK A661 56,3
Error in line 154: 8qpjlLejg S633 45,0
Error in line 177: WNtvrEupCK S425 14,6
Error in line 195: c2x A27J 1J,7
Error in line 178: 9i3FK A270 9,6
Error in line 199: S633 S425 23,1
Error in line 201: S633 S633 64,0
Error in line 202: 8qpjlLejg A661 99,6
Error in line 210: 9i3FK S633 81,3
Error in line 203: WNtvrEupCK S633 50,7
Error in line 219: S633 S425 19,4
Error in line 220: S633 S633 92,0
Error in line 225: 8qpjlLejg S425 50,9
Error in line 223: EdtTYEki S425 49,9
Error in line 185: c2x A270 5,9
Error in line 231: GJeUYLKHzcb A661 39,3
